# kyfd

./: .gitignore  NEWS  README  bootstrap  configure.ac
doc/: example.xml  index.html
src/include/: Makefile.am
src/include/kyfd/: Makefile.am  beam-trim.h  component-arc.h  component-map.h  component-weight.h  components.h  decoder-config.h  decoder.h  fallback-matcher.h  fst-node.h  sampgen.h  string-manager.h  util.h
src/lib/: Makefile.am  decoder-config.cc  decoder.cc  string-manager.cc
